--- a/shop/src/main/webapp/WEB-INF/web.xml
+++ b/shop/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,7 @@
   <auth-method>BASIC</auth-method>
   <realm-name>Webshop</realm-name>
  </login-config>
+
  <security-constraint>
   <web-resource-collection>
    <web-resource-name>Kunden erzeugen und modifizieren</web-resource-name>
@@ -48,17 +49,20 @@
    <role-name>mitarbeiter</role-name>
   </auth-constraint>
  </security-constraint>
- <security-constraint>
+ 
+  <security-constraint>
   <web-resource-collection>
-   <web-resource-name>Privatkunden durch ein "Formular" erzeugen</web-resource-name>
-   <url-pattern>/rest/kunden/form</url-pattern>
-   <http-method>POST</http-method>
+   <web-resource-name>Kunden suchen</web-resource-name>
+   <url-pattern>/rest/kunden</url-pattern>
+   <http-method>GET</http-method>
   </web-resource-collection>
   <auth-constraint>
    <role-name>admin</role-name>
    <role-name>mitarbeiter</role-name>
+   <role-name>kunde</role-name>
   </auth-constraint>
  </security-constraint>
+
  <security-constraint>
   <web-resource-collection>
    <web-resource-name>Kunden loeschen</web-resource-name>
@@ -69,11 +73,13 @@
    <role-name>admin</role-name>
   </auth-constraint>
  </security-constraint>
+ 
  <security-constraint>
   <web-resource-collection>
-   <web-resource-name>Bestellungen erzeugen</web-resource-name>
+   <web-resource-name>Bestellungen erzeugen und modifizieren</web-resource-name>
    <url-pattern>/rest/bestellungen</url-pattern>
    <http-method>POST</http-method>
+   <http-method>PUT</http-method>
   </web-resource-collection>
   <auth-constraint>
    <role-name>admin</role-name>
@@ -81,6 +87,47 @@
    <role-name>kunde</role-name>
   </auth-constraint>
  </security-constraint>
+
+   <security-constraint>
+  <web-resource-collection>
+   <web-resource-name>Bestellungen suchen</web-resource-name>
+   <url-pattern>/rest/bestellungen</url-pattern>
+   <http-method>GET</http-method>
+  </web-resource-collection>
+  <auth-constraint>
+   <role-name>admin</role-name>
+   <role-name>mitarbeiter</role-name>
+   <role-name>kunde</role-name>
+  </auth-constraint>
+ </security-constraint>
+ 
+  <security-constraint>
+  <web-resource-collection>
+   <web-resource-name>Artikel erzeugen und modifizieren</web-resource-name>
+   <url-pattern>/rest/artikel</url-pattern>
+   <http-method>POST</http-method>
+   <http-method>PUT</http-method>
+  </web-resource-collection>
+  <auth-constraint>
+   <role-name>admin</role-name>
+   <role-name>mitarbeiter</role-name>
+   <role-name>kunde</role-name>
+  </auth-constraint>
+ </security-constraint>
+
+   <security-constraint>
+  <web-resource-collection>
+   <web-resource-name>Artikel suchen</web-resource-name>
+   <url-pattern>/rest/artikel</url-pattern>
+   <http-method>GET</http-method>
+  </web-resource-collection>
+  <auth-constraint>
+   <role-name>admin</role-name>
+   <role-name>mitarbeiter</role-name>
+   <role-name>kunde</role-name>
+  </auth-constraint>
+ </security-constraint>
+
  <security-role>
   <role-name>admin</role-name>
  </security-role>
