--- a/shop/src/main/webapp/WEB-INF/web.xml
+++ b/shop/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,6 @@
   <auth-method>BASIC</auth-method>
   <realm-name>Webshop</realm-name>
  </login-config>
-
  <security-constraint>
   <web-resource-collection>
    <web-resource-name>Kunden erzeugen und modifizieren</web-resource-name>
@@ -49,20 +48,17 @@
    <role-name>mitarbeiter</role-name>
   </auth-constraint>
  </security-constraint>
- 
-  <security-constraint>
+ <security-constraint>
   <web-resource-collection>
-   <web-resource-name>Kunden suchen</web-resource-name>
-   <url-pattern>/rest/kunden</url-pattern>
-   <http-method>GET</http-method>
+   <web-resource-name>Kunden durch ein "Formular" erzeugen</web-resource-name>
+   <url-pattern>/rest/kunden/form</url-pattern>
+   <http-method>POST</http-method>
   </web-resource-collection>
   <auth-constraint>
    <role-name>admin</role-name>
    <role-name>mitarbeiter</role-name>
-   <role-name>kunde</role-name>
   </auth-constraint>
  </security-constraint>
-
  <security-constraint>
   <web-resource-collection>
    <web-resource-name>Kunden loeschen</web-resource-name>
@@ -71,12 +67,12 @@
   </web-resource-collection>
   <auth-constraint>
    <role-name>admin</role-name>
+   <role-name>kunde</role-name>
   </auth-constraint>
  </security-constraint>
- 
  <security-constraint>
   <web-resource-collection>
-   <web-resource-name>Bestellungen erzeugen und modifizieren</web-resource-name>
+   <web-resource-name>Bestellungen erzeugen</web-resource-name>
    <url-pattern>/rest/bestellungen</url-pattern>
    <http-method>POST</http-method>
    <http-method>PUT</http-method>
@@ -87,20 +83,6 @@
    <role-name>kunde</role-name>
   </auth-constraint>
  </security-constraint>
-
-   <security-constraint>
-  <web-resource-collection>
-   <web-resource-name>Bestellungen suchen</web-resource-name>
-   <url-pattern>/rest/bestellungen</url-pattern>
-   <http-method>GET</http-method>
-  </web-resource-collection>
-  <auth-constraint>
-   <role-name>admin</role-name>
-   <role-name>mitarbeiter</role-name>
-   <role-name>kunde</role-name>
-  </auth-constraint>
- </security-constraint>
- 
   <security-constraint>
   <web-resource-collection>
    <web-resource-name>Artikel erzeugen und modifizieren</web-resource-name>
@@ -111,15 +93,15 @@
   <auth-constraint>
    <role-name>admin</role-name>
    <role-name>mitarbeiter</role-name>
-   <role-name>kunde</role-name>
   </auth-constraint>
  </security-constraint>
-
-   <security-constraint>
+  <security-constraint>
   <web-resource-collection>
-   <web-resource-name>Artikel suchen</web-resource-name>
-   <url-pattern>/rest/artikel</url-pattern>
-   <http-method>GET</http-method>
+   <web-resource-name>Position erzeugen und modifizieren</web-resource-name>
+   <url-pattern>/rest/positionen</url-pattern>
+   <http-method>POST</http-method>
+   <http-method>PUT</http-method>
+   <http-method>DELETE</http-method>
   </web-resource-collection>
   <auth-constraint>
    <role-name>admin</role-name>
@@ -127,7 +109,30 @@
    <role-name>kunde</role-name>
   </auth-constraint>
  </security-constraint>
-
+  <security-constraint>
+  <web-resource-collection>
+   <web-resource-name>Adresse erzeugen und modifizieren</web-resource-name>
+   <url-pattern>/rest/adresse</url-pattern>
+   <http-method>POST</http-method>
+   <http-method>PUT</http-method>
+  </web-resource-collection>
+  <auth-constraint>
+   <role-name>admin</role-name>
+   <role-name>mitarbeiter</role-name>
+   <role-name>kunde</role-name>
+  </auth-constraint>
+ </security-constraint>
+  <security-constraint>
+  <web-resource-collection>
+   <web-resource-name>Rolle vergeben und modifizieren</web-resource-name>
+   <url-pattern>/rest/kunden</url-pattern>
+   <http-method>POST</http-method>
+   <http-method>PUT</http-method>
+  </web-resource-collection>
+  <auth-constraint>
+   <role-name>admin</role-name>
+  </auth-constraint>
+ </security-constraint>
  <security-role>
   <role-name>admin</role-name>
  </security-role>
