--- a/shop/src/main/webapp/WEB-INF/web.xml
+++ b/shop/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,105 @@
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
  <display-name>shop</display-name>
- <context-param>
+   <context-param>
+    <description>In Produktion: Javascript komprimieren, d.h. auf true setzen</description>
+    <param-name>com.sun.faces.compressJavaScript</param-name>
+    <param-value>false</param-value>
+  </context-param>
+  <context-param>
+    <description>In Produktion: serverseitige Statusinfo ueber Clients komprimieren, d.h. auf true setzen</description>
+    <param-name>com.sun.faces.compressViewState</param-name>
+    <param-value>false</param-value>
+  </context-param>
+  <context-param>
+    <param-name>com.sun.faces.displayConfiguration</param-name>
+    <param-value>true</param-value>
+  </context-param>
+  <context-param>
+    <description>In Produktion: Validierung der Tags mit f: abschalten, d.h. auf false setzen</description>
+    <param-name>com.sun.faces.enableCoreTagLibValidator</param-name>
+    <param-value>true</param-value>
+  </context-param>
+  <context-param>
+    <param-name>com.sun.faces.forceLoadConfiguration</param-name>
+    <param-value>true</param-value>
+  </context-param>
+  <context-param>
+    <description>In Produktion: hoeherer Wert (in Min.), wann ueberprueft wird, ob es z.B. neue Bilder oder CSS-Dateien gibt</description>
+    <param-name>com.sun.faces.resourceUpdateCheckPeriod</param-name>
+    <param-value>1</param-value>
+  </context-param>
+  <context-param>
+    <param-name>com.sun.faces.validateXml</param-name>
+    <param-value>false</param-value>
+  </context-param>
+  <context-param>
+    <param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
+    <param-value>true</param-value>
+  </context-param>
+  <context-param>
+    <description>In welchen Abstaenden prueft der Compiler bzgl. Aenderungen: Einheit = Sekunden, default = 2. In Produktion auf -1 setzen, d.h. keine Pruefung</description>
+    <param-name>javax.faces.FACELETS_REFRESH_PERIOD</param-name>
+    <param-value>1</param-value>
+  </context-param>
+  <context-param>
+    <description>damit Kommentare platziert werden koennen</description>
+    <param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
+    <param-value>true</param-value>
+  </context-param>
+  <context-param>
+    <description>Nicht-vorhandene Eingabe als null interpretieren und nicht als leerer String</description>
+    <param-name>javax.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL</param-name>
+    <param-value>true</param-value>
+  </context-param>
+  <context-param>
+    <description>In Produktion: auskommentieren. In Entwicklung nicht behandelte Fehlermeldungen anzeigen mit h:messages</description>
+    <param-name>javax.faces.PROJECT_STAGE</param-name>
+    <param-value>Development</param-value>
+  </context-param>
+  <context-param>
+    <param-name>org.atmosphere.useBlocking</param-name>
+    <param-value>true</param-value>
+  </context-param>
+  <context-param>
+    <description>RichFaces Push initialisieren</description>
+    <param-name>org.richfaces.push.initializeOnStartup</param-name>
+    <param-value>true</param-value>
+  </context-param>
+  <context-param>
+    <description>Dateien mit Javascript und CSS in wenigen, optimierten Dateien fuer mobile Web-Anwendungen. http://rik-ansikter.blogspot.com/2012/02/optimizing-resource-loading-with.html</description>
+    <param-name>org.richfaces.resourceOptimization.enabled</param-name>
+    <param-value>true</param-value>
+  </context-param>
+  <context-param>
+    <param-name>org.richfaces.resourceOptimization.packagingStages</param-name>
+    <param-value>Production</param-value>
+  </context-param>
+  <context-param>
+    <description>org.richfaces.fileUpload.tempFilesDirectory, um das Verzeichnis zu setzen. Default in Windows 7 und VISTA: %TEMP%, d.h. C:\Users\MYACCOUNT\AppData\Local\Temp  </description>
+    <param-name>org.richfaces.fileUpload.createTempFiles</param-name>
+    <param-value>true</param-value>
+  </context-param>
+  <context-param>
+    <description>Maximum: 2147483647 = 2 GB - 1. Siehe https://jira.jboss.org/jira/browse/RF-6590</description>
+    <param-name>org.richfaces.fileUpload.maxRequestSize</param-name>
+    <param-value>5000000</param-value>
+  </context-param>
+  <context-param>
+    <description>Alternativen: blueSky, classic, deepMarine, emeraldTown, japanCherry, ruby, wine</description>
+    <param-name>org.richfaces.skin</param-name>
+    <param-value>blueSky</param-value>
+  </context-param>
+    <context-param>
+    <description>Context fuer Datei-Upload</description>
+    <param-name>fileStoreContext</param-name>
+    <param-value>/../shopFiles</param-value>
+  </context-param>
+  <session-config>
+    <session-timeout>15</session-timeout>
+    <tracking-mode>COOKIE</tracking-mode>
+  </session-config>
+  <context-param>
   <description>Mapping fuer XML, JSON usw.</description>
   <param-name>resteasy.use.builtin.providers</param-name>
   <param-value>true</param-value>
