web.xml mimetype

--- a/shop/src/main/webapp/WEB-INF/web.xml
+++ b/shop/src/main/webapp/WEB-INF/web.xml
@@ -240,4 +240,60 @@
  <security-role>
   <role-name>kunde</role-name>
  </security-role>
+     <mime-mapping>
+    <extension>ico</extension>
+    <mime-type>image/x-icon</mime-type>
+  </mime-mapping>
+  <mime-mapping>
+    <extension>ecss</extension>
+    <mime-type>text/css</mime-type>
+  </mime-mapping>
+    <error-page>
+    <exception-type></exception-type>
+    <location>/error/defaultError.jsf</location>
+  </error-page>
+  <error-page>
+    <error-code>500</error-code>
+    <location>/error/defaultError.jsf</location>
+  </error-page>
+  <error-page>
+    <exception-type>javax.faces.el.EvaluationException</exception-type>
+    <location>/error/defaultError.jsf</location>
+  </error-page>
+  <error-page>
+    <exception-type>javax.validation.ConstraintViolationException</exception-type>
+    <location>/error/defaultError.jsf</location>
+  </error-page>
+  <error-page>
+    <exception-type>org.hibernate.LazyInitializationException</exception-type>
+    <location>/error/defaultError.jsf</location>
+  </error-page>
+  <error-page>
+    <exception-type>de.shop.util.InternalError</exception-type>
+    <location>/error/defaultError.jsf</location>
+  </error-page>
+  <error-page>
+    <error-code>403</error-code>
+    <location>/error/accessDenied.jsf</location>
+  </error-page>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/error/pageNotFound.jsf</location>
+  </error-page>
+  <error-page>
+    <exception-type>javax.faces.application.ViewExpiredException</exception-type>
+    <location>/error/timeout.jsf</location>
+  </error-page>
+  <error-page>
+    <exception-type>com.sun.faces.context.FacesFileNotFoundException</exception-type>
+    <location>/error/pageNotFound.jsf</location>
+  </error-page>
+  <error-page>
+    <exception-type>java.io.FileNotFoundException</exception-type>
+    <location>/error/pageNotFound.jsf</location>
+  </error-page>
+  <error-page>
+    <exception-type>javax.ejb.EJBAccessException</exception-type>
+    <location>/error/accessDenied.jsf</location>
+  </error-page>
 </web-app>
