--- a/shop/src/main/webapp/WEB-INF/web.xml
+++ b/shop/src/main/webapp/WEB-INF/web.xml
@@ -89,7 +89,7 @@
   <context-param>
     <description>Alternativen: blueSky, classic, deepMarine, emeraldTown, japanCherry, ruby, wine</description>
     <param-name>org.richfaces.skin</param-name>
-    <param-value>blueSky</param-value>
+    <param-value>japanCherry</param-value>
   </context-param>
     <context-param>
     <description>Context fuer Datei-Upload</description>
