--- a/shop/src/main/webapp/WEB-INF/web.xml
+++ b/shop/src/main/webapp/WEB-INF/web.xml
@@ -87,9 +87,9 @@
     <param-value>5000000</param-value>
   </context-param>
   <context-param>
-    <description>Alternativen: blueSky, classic, deepMarine, emeraldTown, japanCherry, ruby, wine</description>
+    <description>Alternativen: blueSky, classic, deepMarine, emeraldTown, japanCherry,  ruby, wine</description>
     <param-name>org.richfaces.skin</param-name>
-    <param-value>japanCherry</param-value>
+    <param-value>ruby</param-value>
   </context-param>
     <context-param>
     <description>Context fuer Datei-Upload</description>
